--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -86,7 +86,7 @@
 
     <%# Priority point%>
     <div class="mt-2 mb-2 d-flex justify-content-between align-items-center">
-    
+
      <!-- Priority Text -->
       <p class="ticket-show-p-font mb-0">
         Priorité :
@@ -113,10 +113,10 @@
     <%# Creation date / Update date %>
     <div class="ticket-show-p-font">
       <% if @ticket.created_at == @ticket.updated_at %>
-        <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
+        <p><strong>Créé le :</strong> <%= @ticket.created_at.strftime("%d/%m/%Y à %H:%M") %></p>
       <% else %>
-        <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
-        <p><strong>Derniere modification :</strong> <%= @ticket.updated_at.to_s %></p>
+        <p><strong>Créé le :</strong> <%= @ticket.created_at.strftime("%d/%m/%Y à %H:%M") %></p>
+        <p><strong>Derniere modification :</strong> <%= @ticket.updated_at.strftime("%d/%m/%Y à %H:%M") %></p>
       <% end %>
     </div>
 
@@ -161,14 +161,31 @@
 
   <%# Comments %>
   <div>
-    <h5 class="mt-4 mb-4 ticket-show-h-font"><strong>Commentaires :</strong></h5>
+    <h5 class="mt-3 mb-3 ticket-show-h-font mb-0"><strong>Commentaires :</strong></h5>
+
+    <%= simple_form_for [@ticket, @comment], defaults: { wrapper: false } do |f| %>
+      <div class="input-group mb-3">
+        <%= f.input :content, input_html: {
+          class: "",
+          placeholder: "Écrivez un commentaire...",
+        },
+        label: false %>
+        <div class="input-group-append">
+          <%= button_tag raw('<i class="fa-solid fa-paper-plane" style="color: #f96d00;"></i>'),
+                          type: 'submit',
+                          class: 'btn comment-submit' %>
+        </div>
+      </div>
+      <div id="comment-error"></div>
+    <% end %>
+
     <div class="card mt-2 mb-2 card-show-ticket">
-      <% @ticket.comments.each do |comment| %>
-          <div class="border-bottom-comment card-body ticket-show-p-font mt-2 mb-2">
-            <p class=""><strong><%= comment.user.first_name %> <%= comment.user.last_name %></strong></p>
-            <p class="">Le : <%= comment.created_at %></p>
-            <p class=""><%= comment.content.capitalize %></p>
-          </div>
+      <% @comments.each do |comment| %>
+        <div class="border-bottom-comment card-body ticket-show-p-font mt-1 mb-1">
+          <p class=""><strong><%= comment.user.first_name %> <%= comment.user.last_name %></strong></p>
+          <p class=""><%= comment.created_at.strftime("%d/%m/%Y à %H:%M") %></p>
+          <p class=""><%= comment.content.capitalize %></p>
+        </div>
       <% end %>
     </div>
   </div>
