--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -1,3 +1,37 @@
+.no-border-bottom {
+  border-bottom: none;
+}
+
+.no-border-top {
+  border-top: none;
+}
+
+.img-show {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+}
+
+.img-show-modal-ticket {
+  object-fit: cover;
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+.modal-body-show img {
+  width: 100%;
+  height: auto;
+}
+
+.modal-ticket-close-x {
+  cursor: pointer;
+  margin-left: auto;
+  font-size: 24px;
+  padding: 2px 0 2px 0;
+}
+
 .card-show-ticket {
   background-color: $white;
   color: $gray;
@@ -77,11 +111,11 @@
   display: grid;
   grid-template-columns: repeat(2, 1fr);
   width: fit-content;
-  border: 3px solid #343434;
+  border: 3px solid $gray;
   border-radius: 20px;
-  background: #343434;
+  background: $gray;
   font-weight: bold;
-  color: #343434;
+  color: $gray;
   cursor: pointer;
 }
 .toggleContainer::before {
