--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -31,82 +31,47 @@
   </div>
 </div>
 
-<div class="container-index">
-  <%# Ticket pictures carrousel %>
-  <div id="show-container" class="d-flex flex-column">
+<%# Ticket pictures carrousel %>
 
-    <!-- Carousel Section -->
-    <div class="row g-0 flex-grow-1">
-      <div class="col-12">
-        <div id="carouselExampleIndicators" class="carousel slide h-100">
-          <div class="carousel-indicators">
-            <% if @ticket.photos.any? %>
-              <% @ticket.photos.each_with_index do |_, index| %>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%= index %>" class="<%= 'active' if index == 0 %>" aria-current="<%= 'true' if index == 0 %>" aria-label="Slide <%= index + 1 %>"></button>
-              <% end %>
-            <% else %>
-              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <% end %>
-          </div>
+<!-- Carousel Section // Carousel supprimé -> voir en bas de page -->
+<div>
+  <%if @ticket.photos.attached?%>
+    <%# Display first photo %>
+    <!-- Modal Button -->
+    <div class="img-show-modal-ticket" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
+      <img src="<%= url_for(@ticket.photos.first) %>" class="img-show" alt= "<% @ticket.title %> photo">
+    </div>
+  <%end%>
+</div>
 
-          <div class="carousel-inner h-100">
-            <% if @ticket.photos.any? %>
-              <% @ticket.photos.each_with_index do |photo, index| %>
-                <div class="carousel-item <%= 'active' if index == 0 %> h-100">
-                  <%= cl_image_tag photo.key, crop: "lfill", class: "d-block w-100 h-100", alt: "Ticket Image" %>
-                </div>
-              <% end %>
-            <% else %>
-              <div class="carousel-item active h-100">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg" class="d-block w-100 h-100" alt="No Image Available">
-              </div>
-            <% end %>
-          </div>
-
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
+<!-- Modal -->
+<div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header no-border-bottom">
+        <div class="modal-ticket-close-x" data-bs-dismiss="modal" aria-label="Close"><i class="fas fa-close"></i></div>
+      </div>
+      <div class="modal-body p-0">
+        <img src="<%= url_for(@ticket.photos.first) %>" class="img-show-modal-ticket" alt= "<% @ticket.title %> photo">
+      </div>
+      <div class="modal-footer no-border-top">
+        <button type="button" class="btn btn-warning text-decoration-underline text-light" data-bs-dismiss="modal">Fermer</button>
       </div>
     </div>
   </div>
+</div>
 
-  <div class="container">
-    <%# Ticket informations %>
-    <div class="card-body mt-4 mb-4">
-      <%# title & category && Content %>
-      <h3 class="ticket-show-h-font"><strong><%= @ticket.category %> : <%= @ticket.title %></strong></h3>
-    </div>
+<div class="container">
+  <%# Ticket informations %>
+  <div class="card-body mt-4 mb-4">
+    <%# title & category && Content %>
+    <h3 class="ticket-show-h-font"><strong><%= @ticket.category %> : <%= @ticket.title %></strong></h3>
+  </div>
 
-    <%# Priority point%>
-    <div class="mt-2 mb-2 d-flex justify-content-between align-items-center">
-    <!-- Priority Text -->
-    <p class="ticket-show-p-font mb-0">
-      Prioritée :
-      <span style="color: <%= progress_point(@ticket.priority)[:color] %>">
-        <%= @ticket.priority.humanize %>
-      </span>
-    </p>
-
-    <!-- Progress Point -->
-    <span class="progress-point"
-      style="background-color: <%= progress_point(@ticket.priority)[:color] %>;
-        width: 20px;
-        height: 20px;
-        border-radius: 50%;
-        display: inline-block;">
-    </span>
-    </div>
-
+  <%# Div Status & Priorité %>
+  <div class="d-flex justify-content-between align-items-center">
     <%# Status %>
-    <div class="mt-3 mb-2 ticket-show-p-font">
-      <p><strong>Statut :</strong>
+    <div class="ticket-show-p-font">
         <% if @ticket.status == "nouveau" %>
             <span class="card-tkt-show-nouveau rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
           <% elsif @ticket.status == "en cours" %>
@@ -115,28 +80,45 @@
             <span class="card-tkt-show-resolu rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
         <% end %>
       </p>
-
     </div>
 
-    <%# Creation date / Update date %>
-    <div class="ticket-show-p-font">
-      <% if @ticket.created_at == @ticket.updated_at %>
-        <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
-      <% else %>
-        <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
-        <p><strong>Derniere modification :</strong> <%= @ticket.updated_at.to_s %></p>
-      <% end %>
-    </div>
+    <!-- Priority Text -->
+    <p class="ticket-show-p-font">
+      Priorité :
+      <span style="color: <%= progress_point(@ticket.priority)[:color] %>">
+        <%= @ticket.priority.humanize %>
+      </span>
+    </p>
 
-    <%# Utilisateur %>
-    <p class="ticket-show-p-font"><strong>Utilisateur :</strong> <%= @ticket.user.first_name %> <%= @ticket.user.last_name %></p>
+    <!-- Progress Point /// commenté -->
+    <% if false %>
+      <span class="progress-point"
+        style="background-color: <%= progress_point(@ticket.priority)[:color] %>;
+          width: 20px;
+          height: 20px;
+          border-radius: 50%;
+          display: inline-block;">
+      </span>
+    <% end %>
+  </div>
 
-    <%# Content %>
-    <div class="card-body ticket-show-p-font">
-      <p><%= @ticket.content %></p>
-    </div>
+  <%# Creation date / Update date %>
+  <div class="ticket-show-p-font">
+    <% if @ticket.created_at == @ticket.updated_at %>
+      <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
+    <% else %>
+      <p><strong>Créé le :</strong> <%= @ticket.created_at %></p>
+      <p><strong>Dernière modification :</strong> <%= @ticket.updated_at.to_s %></p>
+    <% end %>
+  </div>
 
+  <%# Utilisateur %>
+  <p class="ticket-show-p-font"><strong>Utilisateur :</strong> <%= @ticket.user.first_name %> <%= @ticket.user.last_name %></p>
 
+  <%# Content %>
+  <div class="card-body ticket-show-p-font">
+    <p><%= @ticket.content %></p>
+  </div>
 
   <%# Actions %>
   <div>
@@ -188,3 +170,50 @@
   <div>This is a toggle</div>
   <div>button</div>
 </label> %>
+
+<%# Carroussel %>
+<% if false %>
+  <%if @ticket.photos.attached?%>
+    <div class="row g-0 flex-grow-1">
+      <div class="col-12">
+        <div id="carouselExampleIndicators" class="carousel slide h-100">
+          <div class="carousel-indicators">
+            <% if @ticket.photos.any? %>
+              <% @ticket.photos.each_with_index do |_, index| %>
+                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="<%= index %>" class="<%= 'active' if index == 0 %>" aria-current="<%= 'true' if index == 0 %>" aria-label="Slide <%= index + 1 %>"></button>
+              <% end %>
+            <% else %>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+            <% end %>
+          </div>
+
+          <div class="carousel-inner h-100">
+            <% if @ticket.photos.any? %>
+              <% @ticket.photos.each_with_index do |photo, index| %>
+                <div class="carousel-item <%= 'active' if index == 0 %> h-100">
+                  <%= cl_image_tag photo.key, crop: "lfill", class: "d-block w-100 h-100", alt: "Ticket Image" %>
+                </div>
+              <% end %>
+            <% else %>
+              <div class="carousel-item active h-100">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/1/14/No_Image_Available.jpg" class="d-block w-100 h-100" alt="No Image Available">
+              </div>
+            <% end %>
+          </div>
+
+          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Previous</span>
+          </button>
+
+          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="visually-hidden">Next</span>
+          </button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <%else%>
+  <%end%>
+<% end %>
