--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -10,12 +10,23 @@
 
 .font-navbar {
   font-family: $body-font;
-  font-size: 25px;
   color: $white;
+  border-color: $white;
 }
 
 .search-button {
-  width: 70px;
+  width: 60px;
+  height: 44px;
+  border-color: $white;
+  margin-right: 10px;
+  font-size: 27px;
+}
+
+.refresh-button{
+  width: 60px;
+  height: 44px;
+  border-color: $white;
+  // margin-left: 12px;
 }
 
 .navbar{
@@ -24,6 +35,37 @@
 }
 
 .search-bar{
-  width: 200px ;
+  width: 160px ;
+  height: 44px;
   padding-left: 10px;
+  font-size: 20px;
+}
+
+.filter-logo {
+  width: 37px; /* Ajustez selon vos besoins */
+  height: 37px;
+  // margin-right: 20px;
+}
+
+.btn-filter{
+  border-color: $white;
+  height: 40px;
+  width: 150px;
+  font-size: 20px;
+  border-radius: 5px;
+  margin-right: 20px;
+  margin-left: 7px;
+}
+
+.btn-dropdown {
+  border-color: $white;
+  width: 120px;
+  font-size: 20px;
+  border-radius: 5px;
+}
+
+
+
+.filter-bar-buttons{
+  margin-top: 3px;
 }
