--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -16,7 +16,7 @@
     </div>
 
     <div class="d-flex align-items-center">
-      <%# boutons search %>
+      <%# bouton search %>
       <button type="submit" class=" bg-dark rounded-pill font-navbar search-button">
         <i class="fa-solid fa-magnifying-glass"></i>
       </button>
