--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -11,3 +11,5 @@
 @import "button_alignment_navbar";
 @import "font_p_h_navbar";
 @import "card_product_coms";
+@import "card_product_action";
+@import "card_action_status";
