--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -74,7 +74,7 @@
       <div class="ticket-show-p-font">
         <% if @ticket.status == "nouveau" %>
             <span class="card-tkt-show-nouveau rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
-          <% elsif @ticket.status == "en cours" %>
+          <% elsif @ticket.status == "actif" %>
             <span class="card-tkt-show-encours rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
           <% elsif @ticket.status == "résolu" %>
             <span class="card-tkt-show-resolu rounded-pill align-items-center"><%= @ticket.status.capitalize %></span>
@@ -120,8 +120,8 @@
               <div data-controller="switch-status" data-switch-status-id-value=<%= action.id %>>
                 <input type="checkbox" data-switch-status-target="status" data-action="change->switch-status#switch" id="toggle_<%= action.id %>" class="toggleCheckbox" <%= 'checked' if action.status == 'complétée' %> />
                 <label for="toggle_<%= action.id %>" class='toggleContainer'>
-                  <div>En cours</div>
-                  <div>Complété</div>
+                  <div>active</div>
+                  <div>complétée</div>
                 </label>
               </div>
             </div>
