colors homogeneization for action status

--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -126,7 +126,7 @@
   height: 100%;
   left: 0%;
   border-radius:20px;
-  background: orange;
+  background: rgb(0, 109, 210);
   transition: all 0.3s;
 }
 
