--- a/app/views/actions/index.html.erb
+++ b/app/views/actions/index.html.erb
@@ -94,16 +94,13 @@
             <div class="date-status">
               <p class="db-font">Date butoir : <strong><%= action.due_date.strftime("%d-%m-%Y") %></strong></p>
                 <div class="d-flex justify-content-around align-items-center d-inline">
-                  <% if ticket.status == "nouveau" %>
-                    <span class="card-act-new rounded-pill card-stat-act"><%= ticket.status.capitalize %></span>
-                  <% elsif ticket.status == "actif" %>
-                    <span class="card-act-encours rounded-pill card-stat-act"><%= ticket.status.capitalize %></span>
-                  <% elsif ticket.status == "résolu" %>
-                    <span class="card-act-resolu rounded-pill card-stat-act"><%= ticket.status.capitalize %></span>
+                  <% if action.status == "active" %>
+                    <span class="card-act-encours rounded-pill card-stat-act"><%= action.status.capitalize %></span>
+                  <% elsif action.status == "complétée" %>
+                    <span class="card-act-resolu rounded-pill card-stat-act"><%= action.status.capitalize %></span>
                   <% end %>
                 </div>
             </div>
-
           <p class="">Responsable : <strong><%= action.user.first_name %> <%= action.user.last_name %></strong></p>
         </div>
         <% end %>
