--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -2,7 +2,7 @@
 
 // For example:
 $red: #FD1015;
-$blue: #0D6EFD;
+$blue: rgb(0, 109, 210);
 $yellow: #FFC65A;
 $green: #1EDD88;
 $orange: #f96d00;
