--- a/app/views/tickets/show.html.erb
+++ b/app/views/tickets/show.html.erb
@@ -55,7 +55,7 @@
         <img src="<%= url_for(@ticket.photos.first) %>" class="img-show-modal-ticket" alt= "<% @ticket.title %> photo">
       </div>
       <div class="modal-footer no-border-top">
-        <button type="button" class="btn btn-warning text-decoration-underline text-light" data-bs-dismiss="modal">Fermer</button>
+        <button type="button" class="btn btn-warning text-decoration-none text-light" data-bs-dismiss="modal">Fermer</button>
       </div>
     </div>
   </div>
