--- a/app/assets/stylesheets/components/_card_product_infos.scss
+++ b/app/assets/stylesheets/components/_card_product_infos.scss
@@ -129,24 +129,22 @@ a {
 }
 
 .card-index-infos h2 {
-  font-size: 14px;
+  font-size: 16px;
+  display: -webkit-box;         /* Active le mode boîte flexible */
+  -webkit-line-clamp: 2;        /* Limite à 2 lignes */
+  -webkit-box-orient: vertical; /* Définit l'orientation verticale */
+  overflow: hidden;             /* Masque le texte dépassant */
+  text-overflow: ellipsis;      /* Ajoute "..." pour le texte tronqué */
   color: $black;
   margin: 0;
   line-height: 1.2;
 }
 
-.card-index-infos p {
-  font-size: 12px;
-  line-height: 1.4;
-  color: $gray;
-  margin: 0;
-}
-
 .card-index-nouveau,
 .card-index-encours,
 .card-index-resolu {
-  font-size: 12px;
-  padding: 0.2em 0.6em;
+  font-size: 14px;
+  padding: 0.1em 0.4em;
   border-radius: 12px;
   white-space: nowrap;
   color: $white;
