--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -105,15 +105,14 @@
           <h2><strong><%= ticket.category %></strong>: <%= ticket.title %></h2>
           <div class="d-flex justify-content-between align-items-center ">
             <% if ticket.status == "nouveau" %>
-              <span class="card-index-nouveau rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
+              <span class="card-index-nouveau rounded-pill"><%= ticket.status.capitalize %></span>
             <% elsif ticket.status == "actif" %>
-              <span class="card-index-encours rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
+              <span class="card-index-encours rounded-pill"><%= ticket.status.capitalize %></span>
             <% elsif ticket.status == "résolu" %>
-              <span class="card-index-resolu rounded-pill align-items-center"><%= ticket.status.capitalize %></span>
+              <span class="card-index-resolu rounded-pill"><%= ticket.status.capitalize %></span>
             <% end %>
-            <p><i class="fa-solid fa-triangle-exclamation fa-2xl" style="color: <%= progress_point(ticket.priority)[:color] %>"></i></p>
+            <p><i class="fa-solid fa-circle-exclamation fa-xl" style="color: <%= progress_point(ticket.priority)[:color] %>; vertical-align: -0.5em;"></i></p>
           </div>
-          <p class=""><%= ticket.content.truncate(40) %></p>
         </div>
       </div>
     <% end %>
