--- a/app/views/tickets/index.html.erb
+++ b/app/views/tickets/index.html.erb
@@ -111,7 +111,13 @@
             <% elsif ticket.status == "résolu" %>
               <span class="card-index-resolu rounded-pill"><%= ticket.status.capitalize %></span>
             <% end %>
-            <p><i class="fa-solid fa-circle-exclamation fa-xl" style="color: <%= progress_point(ticket.priority)[:color] %>; vertical-align: -0.5em;"></i></p>
+          <div>
+            <% if ticket.manager_id == nil %>
+            <% else %>
+                <p class="index-manager"><i class="fa-solid fa-user-tie fa-xl" style="color: #1e2024;"></i> <%= ticket.manager.first_name.first %>. <%= ticket.manager.last_name %></p>
+            <% end %>
+          </div>
+            <p style="vertical-align: -0.5em;"><i class="fa-solid fa-circle-exclamation fa-xl" style="color: <%= progress_point(ticket.priority)[:color] %>; vertical-align: -0.5em;"></i></p>
           </div>
         </div>
       </div>
