--- a/app/assets/stylesheets/components/_ticket_show.scss
+++ b/app/assets/stylesheets/components/_ticket_show.scss
@@ -40,18 +40,21 @@
 
 .ticket-show-h-font {
   font-family: $body-font;
+  font-size: 18px;
+  margin: 0;
 }
 
 .ticket-show-p-font {
   font-family: $headers-font;
   margin: 0;
+  font-size: 16px;
 }
 
 .card-tkt-show-encours {
   background-color: rgb(0, 109, 210);
-  font-weight: bold;
+  // font-weight: bold;
   color: $white;
-  padding: 0.3em 1em; /* Même logique pour garder une taille homogène */
+  padding: 0.2em 0.7em; /* Même logique pour garder une taille homogène */
   margin: 0.2em;
   text-align: center;
   display: inline-block;
@@ -60,9 +63,9 @@
 
 .card-tkt-show-resolu {
   background-color: green;
-  font-weight: bold;
+  // font-weight: bold;
   color: $white;
-  padding: 0.3em 1em; /* Même logique pour garder une taille homogène */
+  padding: 0.2em 0.7em; /* Même logique pour garder une taille homogène */
   margin: 0.2em;
   text-align: center;
   display: inline-block;
@@ -71,9 +74,9 @@
 
 .card-tkt-show-nouveau {
   background-color: rgb(172, 172, 172);
-  font-weight: bold;
+  // font-weight: bold;
   color: $white;
-  padding: 0.3em 1em; /* Même logique pour garder une taille homogène */
+  padding: 0.2em 0.7em; /* Même logique pour garder une taille homogène */
   margin: 0.2em;
   text-align: center;
   display: inline-block;
