--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -1,19 +1,3 @@
-<%# <nav class="row navbar navbar-dark bg-dark text-bg-dark border-bottom">
-  <!-- Navbar content -->
-  <div class="col-1 logo-container">
-    <%= image_tag "froglab_logo_2.png", class:"logo" %>
-  <%# </div> %>
-  <%# <div class="col-6"> %>
-    <%# <%= form_with url: communications_path, method: :get, local: true do |f| %>
-      <%# <%= f.text_field :query, placeholder: "Recherchez...", class: "bg-dark rounded-pill font-navbar search-bar"%>
-  <%# </div> %>
-    <%# <button type="submit" class="me-3 col-3 bg-dark rounded-pill font-navbar search-button"> %>
-      <%# <i class="fa-solid fa-magnifying-glass"></i> %>
-    <%# </button> %>
-    <%# <%= f.submit "Q", class: "bg-dark rounded-pill font-navbar search-button"%>
-  <%# <% end %>
-<%# </nav> %>
-
 <nav class="row navbar mt-1 navbar-dark bg-dark text-bg-dark border-bottom">
   <!-- Navbar content -->
 
@@ -26,18 +10,26 @@
     </div>
 
     <%# barre de recherche  %>
-    <div class="">
-      <%= form_with url: communications_path, method: :get, local: true do |f| %>
-        <%= f.text_field :query, placeholder: "Recherchez...", class: "bg-dark rounded-pill font-navbar search-bar"%>
+    <div class="d-flex align-items-center position-relative">
+      <%= form_with url: communications_path, method: :get, local: true, class: "d-flex" do |f| %>
+        <%= f.text_field :query, placeholder: "", class: "bg-dark font-navbar search-bar"%>
+        <%# logo loupe %>
+        <div class="position-absolute top-50 start-0 translate-middle ms-4">
+          <svg xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#F2F2F2">
+            <path d="M779.38-153.85 528.92-404.31q-30 25.54-69 39.54t-78.38 14q-96.1 0-162.67-66.53-66.56-66.53-66.56-162.57 0-96.05 66.53-162.71 66.53-66.65 162.57-66.65 96.05 0 162.71 66.56Q610.77-676.1 610.77-580q0 41.69-14.77 80.69t-38.77 66.69l250.46 250.47-28.31 28.3ZM381.54-390.77q79.61 0 134.42-54.81 54.81-54.8 54.81-134.42 0-79.62-54.81-134.42-54.81-54.81-134.42-54.81-79.62 0-134.42 54.81-54.81 54.8-54.81 134.42 0 79.62 54.81 134.42 54.8 54.81 134.42 54.81Z"/>
+          </svg>
+        </div>
+        <%# logo send %>
+
+        <button type="submit" class="bg-dark font-navbar search-button d-flex align-items-center">
+          <svg class="ms-2" xmlns="http://www.w3.org/2000/svg" height="30px" viewBox="0 -960 960 960" width="30px" fill="#F2F2F2">
+            <path d="M140-190v-580l688.46 290L140-190Zm60-90 474-200-474-200v147.69L416.92-480 200-427.69V-280Zm0 0v-400 400Z"/>
+          </svg>
+        </button>
+      <% end %>
     </div>
 
     <div class="d-flex align-items-center">
-      <%# boutons search %>
-      <button type="submit" class=" bg-dark rounded-pill font-navbar search-button">
-        <i class="fa-solid fa-magnifying-glass"></i>
-      </button>
-      <% end %>
-
       <%# bouton refresh  %>
       <button class="bg-dark rounded-pill font-navbar refresh-button">
         <%= link_to communications_path, class: "d-flex align-items-center justify-content-center text-decoration-none" do %>
@@ -49,9 +41,6 @@
     </div>
   </div>
 </nav>
-
-
-
 
 <div class="container-index justify-content-center mt-3">
   <% @communications.each do |communication| %>
