--- a/app/assets/stylesheets/pages/_homepage.scss
+++ b/app/assets/stylesheets/pages/_homepage.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   text-align: center;
-  margin-top: 40%;
+  margin-top: 270px;
   h1 {
     padding-top: 1em;
   }
