change the footer font size & tried to center the paper plane

--- a/app/assets/stylesheets/components/_footer.scss
+++ b/app/assets/stylesheets/components/_footer.scss
@@ -27,6 +27,10 @@
 
 }
 
-.footer-bottom {
-  padding-bottom: 10px;
+// .footer-bottom {
+//   padding-bottom: 10px;
+// }
+
+.ticket-index-p-font{
+  font-size: 14px ;
 }
