--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -85,7 +85,7 @@ input[name="query"] {
 
 .paper-plane-size {
   font-size: 22px;
-  margin-left: 8px;
+  // margin-left: 8px;
   opacity: 80%;
 }
 
