--- a/app/views/communications/index.html.erb
+++ b/app/views/communications/index.html.erb
@@ -55,17 +55,10 @@
         <h2>
           <strong><%= communication.category.capitalize %></strong>: <%= communication.title.capitalize %>
         </h2>
-          <div class="d-font">
-            <% if communication.created_at == communication.updated_at %>
-              <p><%= communication.created_at.strftime("%d-%m-%Y") %></p>
-            <% else %>
-              <p><%= communication.created_at.strftime("%d-%m-%Y") %></p>
-              <p><strong>Dernière modification :</strong> <%= communication.updated_at.strftime("%d-%m-%Y %H:%M:%S") %></p>
-            <% end %>
+          <div class="d-font pt-2">
+            <p class="comm-sender-date"><%= communication.user.first_name %> <%= communication.user.last_name %> le <%= communication.created_at.strftime("%d/%m/%Y à %H:%M") %></p>
           </div>
-
-
-        <p><%= truncate(communication.content.capitalize, length: 100) %></p>
+        <p><%= truncate(communication.content.capitalize, length: 90) %></p>
       </div>
     </div>
 
@@ -78,7 +71,8 @@
                 <div class="modal-header bg-white mt-5">
                   <div class="text-dark">
                     <h1 class="modal-title fs-1 mdb" id="<%= communication.id %>-communicationLabel"><strong><%= communication.category.capitalize %></strong> : <%= communication.title %></h1>
-                      <div class="modal-body bg-white text-dark">
+                      <p class="comm-sender-date modal-comm-date pt-2"><%= communication.user.first_name %> <%= communication.user.last_name %> le <%= communication.created_at.strftime("%d/%m/%Y à %H:%M") %></p>
+                      <div class="pt-1 bg-white text-dark">
                         <p class="text-start"><%= communication.content.capitalize %></p>
                         </div>
                       </div>
