--- a/app/assets/stylesheets/components/_card_product_action.scss
+++ b/app/assets/stylesheets/components/_card_product_action.scss
@@ -23,7 +23,7 @@
   width: 100%;
 }
 
-.card-action-irnfos h2 {
+.card-action-infos h2 {
   font-family: $headers-font;
   font-size: 16px;
   color: $black;
