centrage icone send dans search bar index actions

--- a/app/views/actions/index.html.erb
+++ b/app/views/actions/index.html.erb
@@ -18,8 +18,7 @@
           </svg>
         </div>
         <%# logo send %>
-
-        <button type="submit" class="bg-dark font-navbar search-button d-flex align-items-center">
+        <button type="submit" class="bg-dark font-navbar search-button d-flex align-items-center justify-content-center">
           <i class="fa-solid fa-paper-plane paper-plane-size" style="color: #f2f2f2;"></i>
         </button>
       <% end %>
@@ -29,7 +28,7 @@
       <%# bouton refresh  %>
       <button class="bg-dark rounded-pill font-navbar refresh-button">
         <%= link_to actions_path, class: "d-flex align-items-center justify-content-center text-decoration-none" do %>
-           <i class="fa-solid fa-rotate-right"></i> 
+           <i class="fa-solid fa-rotate-right"></i>
         <% end %>
       </button>
     </div>
